// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTipsConfiguration formatting (a long message with an indented line) _showErrorTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.",
  "|   Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "|   sed do eiusmod tempor incididunt ut labore et dolore magna",
  "|   aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "|   ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "|   Duis aute irure dolor in reprehenderit in voluptate velit",
  "|   esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "|   sint occaecat cupidatat non proident, sunt in culpa qui",
  "|   officia deserunt mollit anim id est laborum.[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message with an indented line) _showInfoTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)",
  "|",
  "| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.",
  "|   Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "|   sed do eiusmod tempor incididunt ut labore et dolore magna",
  "|   aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "|   ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "|   Duis aute irure dolor in reprehenderit in voluptate velit",
  "|   esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "|   sint occaecat cupidatat non proident, sunt in culpa qui",
  "|   officia deserunt mollit anim id est laborum.",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message with an indented line) _showTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.",
  "|   Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "|   sed do eiusmod tempor incididunt ut labore et dolore magna",
  "|   aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "|   ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "|   Duis aute irure dolor in reprehenderit in voluptate velit",
  "|   esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "|   sint occaecat cupidatat non proident, sunt in culpa qui",
  "|   officia deserunt mollit anim id est laborum.[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message with an indented line) _showWarningTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "[yellow]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[yellow]|[default]",
  "[yellow]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.",
  "|   Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "|   sed do eiusmod tempor incididunt ut labore et dolore magna",
  "|   aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "|   ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "|   Duis aute irure dolor in reprehenderit in voluptate velit",
  "|   esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "|   sint occaecat cupidatat non proident, sunt in culpa qui",
  "|   officia deserunt mollit anim id est laborum.[default]",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message) _showErrorTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message) _showInfoTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)",
  "|",
  "| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message) _showTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a long message) _showWarningTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "[yellow]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[yellow]|[default]",
  "[yellow]| Lorem ipsum dolor sit amet, consectetur adipiscing elit,",
  "| sed do eiusmod tempor incididunt ut labore et dolore magna",
  "| aliqua. Ut enim ad minim veniam, quis nostrud exercitation",
  "| ullamco laboris nisi ut aliquip ex ea commodo consequat.",
  "| Duis aute irure dolor in reprehenderit in voluptate velit",
  "| esse cillum dolore eu fugiat nulla pariatur. Excepteur",
  "| sint occaecat cupidatat non proident, sunt in culpa qui",
  "| officia deserunt mollit anim id est laborum.[default]",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with an indented line) _showErrorTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test",
  "|   This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with an indented line) _showInfoTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)",
  "|",
  "| This is a test",
  "|   This is a test",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with an indented line) _showTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test",
  "|   This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with an indented line) _showWarningTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "[yellow]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[yellow]|[default]",
  "[yellow]| This is a test",
  "|   This is a test[default]",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with newlines) _showErrorTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test",
  "| This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with newlines) _showInfoTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)",
  "|",
  "| This is a test",
  "| This is a test",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with newlines) _showTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test",
  "| This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a message with newlines) _showWarningTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "[yellow]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[yellow]|[default]",
  "[yellow]| This is a test",
  "| This is a test[default]",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a short message) _showErrorTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a short message) _showInfoTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)",
  "|",
  "| This is a test",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a short message) _showTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "[red]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[red]|[default]",
  "[red]| This is a test[default]",
  "",
  "--------------------",
  "--- warning output ---",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration formatting (a short message) _showWarningTip prints an expected message 1`] = `
Array [
  "--- normal output ---",
  "",
  "",
  "---------------------",
  "--- error output ---",
  "",
  "--------------------",
  "--- warning output ---",
  "[yellow]| Custom Tip (TIP_PNPM_INVALID_NODE_VERSION)[default]",
  "[yellow]|[default]",
  "[yellow]| This is a test[default]",
  "",
  "----------------------",
  "--- verbose output ---",
  "",
  "----------------------",
  "--- debug output ---",
  "",
  "--------------------",
]
`;

exports[`CustomTipsConfiguration loads the config file (custom-tips.json) 1`] = `
Map {
  "TIP_RUSH_INCONSISTENT_VERSIONS" => Object {
    "message": "This is so wrong my friend. Please read this doc for more information: google.com",
    "tipId": "TIP_RUSH_INCONSISTENT_VERSIONS",
  },
}
`;
